--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-
+title: Pranathi Cheemarla
+email: pranathi.cheemarla@gmail.com
+#logo: assets/close_shot.png
+#description: text below image
+#show_downloads: true
+theme: jekyll-theme-Minimal
